bugfix - homepage subtitle on mobile

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -803,6 +803,8 @@ a {
 
     @include small {
       font-size: 1em;
+      margin-left: 4em;
+      margin-right: 4em;
     }
   }
 
